// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enroll-profile-update-required-field fails client side validation with empty required fields 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 2953fba96 (OKTA-588627: loginpage odyssey style (#3493))
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
<<<<<<< HEAD
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
=======
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
>>>>>>> 90c119bc4 (added odyssey legacy alias package)
=======
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
>>>>>>> 2953fba96 (OKTA-588627: loginpage odyssey style (#3493))
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      <span
                        class="MuiBox-root emotion-14"
                        translate="no"
                      >
                        error
                      </span>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-16"
                >
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                      data-se="identifier-container"
                      title="testUser@okta.com"
                    >
                      <div
                        class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault emotion-19"
                        data-se="identifier"
                        translate="no"
                      >
                        <div
                          class="MuiChip-icon MuiChip-iconMedium MuiChip-iconColorDefault MuiBox-root emotion-20"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-21"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M15.5 6.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm2 0a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0ZM5 23c0-2.357.694-4.363 1.886-5.762C8.064 15.856 9.782 15 12 15c2.215 0 3.934.862 5.113 2.25C18.307 18.652 19 20.66 19 23h2c0-2.722-.807-5.216-2.363-7.046C17.067 14.107 14.785 13 12 13c-2.782 0-5.064 1.097-6.636 2.941C3.806 17.77 3 20.263 3 23h2Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              User
                            </title>
                          </svg>
                        </div>
                        <span
                          class="MuiChip-label MuiChip-labelMedium emotion-22"
                        >
                          testUser@okta.com
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-24"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-25"
                        data-se="o-form-head"
                        id="profile-update_Title_Additional_Profile_information_1"
                        tabindex="-1"
                      >
                        Additional Profile information
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-24"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-28"
                        data-se="o-form-explain"
                        id="profile-update_Description_Fields_are_required_unless_marked_optional_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-31"
                        data-shrink="false"
                        for="userProfile.newAttribute"
                      >
                        Some custom attribute
                        <p
                          class="MuiTypography-root MuiTypography-subtitle1 emotion-32"
                        >
                          Optional
                        </p>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-33"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-34"
                          data-se="userProfile.newAttribute"
                          id="userProfile.newAttribute"
                          name="userProfile.newAttribute"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-31"
                        data-shrink="false"
                        for="userProfile.secondEmail"
                      >
                        Secondary email
                        <p
                          class="MuiTypography-root MuiTypography-subtitle1 emotion-32"
                        >
                          Optional
                        </p>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-33"
                      >
                        <input
                          aria-describedby="userProfile.secondEmail-explain"
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-34"
                          data-se="userProfile.secondEmail"
                          id="userProfile.secondEmail"
                          name="userProfile.secondEmail"
                          type="text"
                        />
                      </div>
                      <p
                        class="MuiFormHelperText-root o-form-explain emotion-41"
                        data-se="userProfile.secondEmail-explain"
                        id="userProfile.secondEmail-explain"
                      >
                        Use a second email to 
                        <span
                          class="strong"
                        >
                           recover your account 
                        </span>
                         in case you become locked out. This email must be verified after setup.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-44"
                        data-shrink="false"
                        for="userProfile.newAttribute2"
                      >
                        Some custom attribute 2
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-45"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-33"
                      >
                        <input
                          aria-describedby=" userProfile.newAttribute2-error  "
                          aria-invalid="true"
                          class="MuiInputBase-input emotion-34"
                          data-se="userProfile.newAttribute2"
                          id="userProfile.newAttribute2"
                          name="userProfile.newAttribute2"
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-41"
                          data-se="userProfile.newAttribute2-error"
                          id="userProfile.newAttribute2-error"
                          role="alert"
                        >
                          This field cannot be left blank
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-51"
                      data-type="save"
                      tabindex="0"
                      type="submit"
                    >
                      Finish
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-53"
                      data-se="cancel"
                      role="link"
                      type="button"
                    >
                      Back to sign in
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-update-required-field should render form with one required field 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 2953fba96 (OKTA-588627: loginpage odyssey style (#3493))
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
<<<<<<< HEAD
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
=======
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
>>>>>>> 90c119bc4 (added odyssey legacy alias package)
=======
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
>>>>>>> 2953fba96 (OKTA-588627: loginpage odyssey style (#3493))
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                      data-se="identifier-container"
                      title="testUser@okta.com"
                    >
                      <div
                        class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault emotion-12"
                        data-se="identifier"
                        translate="no"
                      >
                        <div
                          class="MuiChip-icon MuiChip-iconMedium MuiChip-iconColorDefault MuiBox-root emotion-13"
                        >
                          <svg
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-14"
                            fill="none"
                            focusable="false"
                            role="img"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M15.5 6.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm2 0a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0ZM5 23c0-2.357.694-4.363 1.886-5.762C8.064 15.856 9.782 15 12 15c2.215 0 3.934.862 5.113 2.25C18.307 18.652 19 20.66 19 23h2c0-2.722-.807-5.216-2.363-7.046C17.067 14.107 14.785 13 12 13c-2.782 0-5.064 1.097-6.636 2.941C3.806 17.77 3 20.263 3 23h2Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <title>
                              User
                            </title>
                          </svg>
                        </div>
                        <span
                          class="MuiChip-label MuiChip-labelMedium emotion-15"
                        >
                          testUser@okta.com
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-17"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-18"
                        data-se="o-form-head"
                        id="profile-update_Title_Additional_Profile_information_1"
                        tabindex="-1"
                      >
                        Additional Profile information
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-17"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-21"
                        data-se="o-form-explain"
                        id="profile-update_Description_Fields_are_required_unless_marked_optional_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-24"
                        data-shrink="false"
                        for="userProfile.newAttribute"
                      >
                        Some custom attribute
                        <p
                          class="MuiTypography-root MuiTypography-subtitle1 emotion-25"
                        >
                          Optional
                        </p>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-26"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.newAttribute"
                          id="userProfile.newAttribute"
                          name="userProfile.newAttribute"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-24"
                        data-shrink="false"
                        for="userProfile.secondEmail"
                      >
                        Secondary email
                        <p
                          class="MuiTypography-root MuiTypography-subtitle1 emotion-25"
                        >
                          Optional
                        </p>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-26"
                      >
                        <input
                          aria-describedby="userProfile.secondEmail-explain"
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.secondEmail"
                          id="userProfile.secondEmail"
                          name="userProfile.secondEmail"
                          type="text"
                        />
                      </div>
                      <p
                        class="MuiFormHelperText-root o-form-explain emotion-34"
                        data-se="userProfile.secondEmail-explain"
                        id="userProfile.secondEmail-explain"
                      >
                        Use a second email to 
                        <span
                          class="strong"
                        >
                           recover your account 
                        </span>
                         in case you become locked out. This email must be verified after setup.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-37"
                        data-shrink="false"
                        for="userProfile.newAttribute2"
                      >
                        Some custom attribute 2
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-38"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-26"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.newAttribute2"
                          id="userProfile.newAttribute2"
                          name="userProfile.newAttribute2"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-42"
                      data-type="save"
                      tabindex="0"
                      type="submit"
                    >
                      Finish
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-44"
                      data-se="cancel"
                      role="link"
                      type="button"
                    >
                      Back to sign in
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
